added litecoin package

--- a/glide.yaml
+++ b/glide.yaml
@@ -297,3 +297,8 @@ import:
 - package: github.com/btcsuite/websocket
 - package: github.com/bartekn/go-bip39
   version: a05967ea095d81c8fe4833776774cfaff8e5036c
+# litecoin
+- package: github.com/ltcsuite/ltcd
+  subpackages:
+  - rpcclient
+- package: github.com/ltcsuite/ltcutil
